# svix-takehome-assignment

./: .env  .envrc  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yaml  submit_task.py  verify_logs.py
.sqlx/: query-0f13754aaff85b4ddab7093f0748c89055ce2873d38c83071bf5d973ca8ab44d.json  query-2080e13cf59b29f2ae390678962b97df13d7662132e893a020492c319fbc1077.json  query-2ae6310bc3fe61cf558a625674e52cfb91051e24af44e9eb7e7f53eb30f8ad30.json  query-60c6f4e4e2f7e9c98621f9c2093f3b239ba9c65fc75046c6fb3cc65041299014.json  query-62652d38f8ab2a665bbcaa293d9937f18521ed6233df8b215e20d239d4691ad6.json  query-7474351eed3b29d404e7948e39c3f3a66d83c856e603b70904bc418760c88ea6.json  query-9278bc8b0f1f4680fcf12e7cdab64364af2aeff24c7cbedfcd450f7e89a8b592.json  query-b05efe59f13a9aaeec05f23cda6363c9a5c713dc709eeb8e6a26c6cb896453c9.json  query-d3adae0d865200aaba423146a9e2cd8b9b5aa566de3db2907a12b49bdedc4011.json  query-e5c8e4373affd4bcab3a131e5de1d091f884ace6cc1d6c6fe542a174def31a9c.json  query-f11bcf96723d78e26e0b56ad466c5d8ad43d542ecd66061332d64d3e26c16282.json
config/: base.toml  local.toml  prod.toml
migrations/: 20241122161057_create_tasks_table.sql
src/: config.rs  db.rs  error.rs  main.rs  types.rs
src/http_server/: api.rs  mod.rs  server.rs
src/task_executor/: executor.rs  mod.rs  notification_handler.rs  pg_searcher.rs  task_handlers.rs  work_queue.rs
