[package]
name = "svix-takehome-assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
config = { version = "0.14.1", features = ["toml"],default-features = false }
derive_more = { version = "1.0.0", features = [ "from_str"] }
http = "1.1.0"
rand = "0.8.5"
reqwest = "0.12.9"
scc = "2.2.5"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["tls-rustls", "postgres", "runtime-tokio","uuid","chrono"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
